# weather-hr-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: filters.rs  handlers.rs  main.rs  request.rs  utils.rs
src/weather/: aws.rs  forecast.rs  forest_fire.rs  mod.rs  particulates.rs
