[package]
name = "weather-hr-rs"
version = "0.1.0"
authors = ["CirnoV <cirnov59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
easy-scraper = "0.1.1"
chrono = "0.4"
scraper = "0.11.0"
clipboard-win = "3.0.1"
regex = "1"
lazy_static = "1.4.0"
