[package]
name = "weather-hr-rs"
version = "0.2.1"
authors = ["CirnoV <cirnov59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
scraper = "0.11.0"
regex = "1"
lazy_static = "1.4.0"
pretty_env_logger = "0.4"
warp = "0.2"
